# AV100_82228_EPC

./: AV100-82228-EPC-03231533  AV100-82228-EPC-03241034  AV100-82228-EPC-03241448  AV100-82228-EPC-03241611  AV100-82228-EPC-03251133  AV100-82228-EPC-03251601  AV100-82228-EPC-03311516  AV100-82228-EPC-03311728  AV100-82228-EPC-04011440  AV100-82228-EPC-04021056  AV100-82228-EPC-04022020  AV100-82228-EPC-04031928  AV100-82228-EPC-04040820  AV100-82228-EPC-04041000  AV100-82228-EPC-04041042  AV100-82228-EPC-04071142  AV100-82228-EPC-04071352  AV100-82228-EPC-04071412  AV100-82228-EPC-04071715  AV100-82228-EPC-04081015  AV100-82228-EPC-04081055  AV100-82228-EPC-04081344  AV100-82228-EPC-04081425  AV100-82228-EPC-04081556  AV100-82228-EPC-04081648  AV100-82228-EPC-04081709  AV100-82228-EPC-04081732  AV100-82228-EPC-04082051  AV100-82228-EPC-04090845  AV100-82228-EPC-04091431  AV100-82228-EPC-04091650  AV100-82228-EPC-04131159  AV100-82228-EPC-04141048  AV100-82228-EPC-04141115  AV100-82228-EPC-04141436  AV100-82228-EPC-04141540  AV100-82228-EPC-04141734  AV100-82228-EPC-04150819  AV100-82228-EPC-04291138  README.md  (+5 more)
app/: main.c
app/app/: app_card.c  app_card.h  app_doorbell.c  app_doorbell.h  app_intercom.c  app_intercom.h  app_keypad.c  app_keypad.h  app_upgrade.c  app_upgrade.h  app_user_config.c  app_user_config.h
app/common/: event_bus.c  event_bus.h  log.h  utils.c  utils.h
app/hal/: drv_adc.c  drv_adc.h  drv_audio_in.c  drv_audio_in.h  drv_audio_out.c  drv_audio_out.h  drv_card.c  drv_card.h  drv_gpio.c  drv_gpio.h  drv_gpio_sysfs.c  drv_gpio_sysfs.h  drv_infrared.c  drv_infrared.h  drv_keypad.c  drv_keypad.h  drv_motion_detect.c  drv_motion_detect.h  drv_net_raw.c  drv_net_raw.h  drv_platform.c  drv_platform.h  drv_video_in.c  drv_video_in.h  drv_watchdog.c  drv_watchdog.h
app/service/: svc_audio.c  svc_audio.h  svc_intercom_stream.c  svc_intercom_stream.h  svc_net_manage.c  svc_net_manage.h  svc_network.c  svc_network.h  svc_svp.c  svc_svp.h  svc_timer.c  svc_timer.h  svc_voice.c  svc_voice.h
cmake/: CMakeLists.txt
daemon/: GpioControl.c  GpioControl.h  build.sh  net_camera.c  net_camera.h  net_indoor.c  upgrade_app.c
doc/: 2083-3918AV100-3838-B1-2W (23.10.09)(1).sch  2083-3918AV100-3838-B1-2W(23.10.14).pcb  2083-3918AV100-3838-B1-2W.pcb  82225-2-EPC_FHD_V1.1.SCH  82225-2-EPC_FHD_V1.1.pcb  五棵树82225FHD-D专用说明书  - 无母卡功能(1).docx
include/anyka3918/: ak_aenc.h  ak_ai.h  ak_common_audio.h  ak_dbg.h  ak_demux.h  ak_osd_ex.h  ak_svp.h  ak_venc.h  ak_vi.h  ak_vpss.h  ak_vqe.h
include/g711/: g711_table.h
test/: Fingerprint.c  Fingerprint.h  GeneralInterface.c  GeneralInterface.h  UartControl.c  UartControl.h  main.c
upgrade/: README.md  cbin.update  make_image.sh  partition_image.sh
upgrade/app/: daemon.sh  ipc_camera
voice/: Dio.pcm
(+12 files in other folders)
